Alterado o home.html (VISUAL)

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Navegando pela API</title>
+    <title>Home</title>
 </head>
 <body>
-    <h1>Bem-vindo ao SustEnergy API</h1>
-    <p>Use os links abaixo para navegar entre as api's que queira analisar:</p>
-    <ul>
-        <li><a href="/api/users">Lista de todos os Usuários</a></li>
-        <li><a href="/api/energy-devices">Lista de todos os dispositivos</a></li>
-        <li><a href="/api/energy-usage">Lista de todos os dados de consumo</a></li>
-    </ul>
+    <h1>Bem-vindo ao Sistema de Energia Sustentável!</h1>
+    <p><a href="/api/energy-devices">Lista de Dispositivos de Energia</a></p>
+    <p><a href="/api/energy-usage-records">Registros de Uso de Energia</a></p>
+    <p><a href="/api/users">Usuários</a></p>
 </body>
 </html>
